--- a/numbergame/index.html
+++ b/numbergame/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="container">
         <div class="game-header">
+            <button class="theme-toggle" id="theme-toggle">🌙</button>
             <h1>4-Digit Number Game</h1>
             <div class="score-board">
                 <span class="attempts">Attempts: <span id="attempt-count">0</span></span>
