--- a/numbergame/Fourdle-main/Fourdle-main/index.html
+++ b/numbergame/Fourdle-main/Fourdle-main/index.html
@@ -9,19 +9,33 @@
     <meta name="theme-color" content="#4CAF50">
 </head>
 <body>
+    <!-- Start Screen -->
+    <div id="start-screen" class="start-screen">
+        <div class="start-container">
+            <h1>Number Guessing Game</h1>
+            <div class="digit-selector">
+                <p>Select number of digits:</p>
+                <div class="scroll-selector">
+                    <button class="scroll-btn scroll-left">-</button>
+                    <span id="selected-digits">4</span>
+                    <button class="scroll-btn scroll-right">+</button>
+                </div>
+            </div>
+            <button id="start-game-btn">Start Game</button>
+        </div>
+    </div>
+
+    <!-- Main Game Container -->
     <div class="container">
         <header>
             <h1>Number Guessing Game</h1>
-            <button id="theme-toggle">🌙</button>
-        </header>
-
-        <div class="game-info">
-            <div class="score-container">
+            <div class="score-info">
                 <span>Attempts: <span id="attempt-count">0</span></span>
                 <span>Best Score: <span id="best-score">-</span></span>
             </div>
-            <div id="status-message">Make your first guess!</div>
-        </div>
+        </header>
+
+        <div id="status-message" class="status-message">Make your first guess!</div>
 
         <div class="guess-container">
             <div class="guess-digit">_</div>
@@ -30,13 +44,8 @@
             <div class="guess-digit">_</div>
         </div>
 
-        <div class="progress-container">
-            <div id="progress" class="progress-bar"></div>
-        </div>
-
         <div class="keyboard">
             <div class="num-keys">
-                <button class="num-key" data-num="0">0</button>
                 <button class="num-key" data-num="1">1</button>
                 <button class="num-key" data-num="2">2</button>
                 <button class="num-key" data-num="3">3</button>
@@ -46,12 +55,16 @@
                 <button class="num-key" data-num="7">7</button>
                 <button class="num-key" data-num="8">8</button>
                 <button class="num-key" data-num="9">9</button>
+                <button class="num-key" data-num="0">0</button>
             </div>
             <div class="control-keys">
                 <button class="backspace-key">⌫</button>
                 <button id="submit">Submit</button>
-                <button id="new-game">New Game</button>
             </div>
+        </div>
+
+        <div class="game-controls">
+            <button id="new-game" class="new-game-btn">New Game</button>
         </div>
 
         <div id="guesses-list" class="guesses-list"></div>
