--- a/PictoGuessGame/index.html
+++ b/PictoGuessGame/index.html
@@ -9,7 +9,7 @@
   <div id="game">
     <img id="image" src="" alt="Image">
     <input type="text" id="guess" placeholder="Your guess here">
-    <button id="submit">Submit</button>
+    <button id="submit">SUBMIT</button>
     <p id="score">Score: 0</p>
   </div>
   <script src="script.js"></script>
